<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_launch"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:autoSizeMaxTextSize="200sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/lite"
        android:text="@string/welcome_to"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="374dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMaxTextSize="500sp"
        android:autoSizeMinTextSize="30sp"
        android:autoSizeStepGranularity="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/bold"
        android:text="@string/donors_choose_title"
        android:textColor="@color/yellow"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/alreadymember"
        android:layout_width="120dp"
        android:layout_height="14dp"
        android:autoSizeMaxTextSize="150sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/regular"
        android:text="@string/alreadymem"
        android:textColor="@color/shada"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/Regisbutton"
        android:layout_width="147dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button"
        android:text="@string/regis"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <EditText
        android:id="@+id/rnameinput"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:autofillHints=""
        android:background="@drawable/shadalekharscope"
        android:ems="10"
        android:hint="@string/namhint"
        android:inputType="textPersonName"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/rmailinput"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:autofillHints=""
        android:background="@drawable/shadalekharscope"
        android:ems="10"
        android:hint="@string/mailhint"
        android:inputType="textEmailAddress"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:id="@+id/passinput"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:autofillHints=""
        android:background="@drawable/shadalekharscope"
        android:ems="10"
        android:hint="@string/confpassword"
        android:inputType="numberPassword"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <EditText
        android:id="@+id/passconfirm"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:autofillHints=""
        android:background="@drawable/shadalekharscope"
        android:ems="10"
        android:hint="@string/passwordreg"
        android:inputType="numberPassword"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="113dp"
        android:layout_height="23dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/shadalekharscope"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />
</androidx.constraintlayout.widget.ConstraintLayout>